# danse.ins

./: CMakeLists.txt  README.md  TODO  rpm.spec.in
docker/: CMakeLists.txt  README
docker/deb/prepare/: Dockerfile
docker/deb/test/: Dockerfile.in
docker/srpm/: CMakeLists.txt
docker/srpm/prepare/: Dockerfile  run
docker/srpm/test/: Dockerfile.in  run  run.in
packaging/srpm/: build
python/: CMakeLists.txt  MANIFEST.in  setup.py.in
